@@ -34,6 +34,9 @@ INSP.NAME.section.multiple.args.message=Only one argument is allowed for ''{0}''
 # SmkSubworkflowRedeclarationInspection
 INSP.NAME.subworkflow.redeclaration=Only last subworkflow with the same name will be executed
 
+# SmkAvoidTabWhitespace
+INSP.NAME.codestyle.avoid.whitespace.tab=Tab character detected. PEP-8 recommends to use spaces in Python like code.
+
 # SmkYetUndefinedNameInspection
 INSP.NAME.rule.or.checkpoint.name.yet.undefined=Rule or Checkpoint name has not been defined yet
 INSP.NAME.rule.or.checkpoint.name.yet.undefined.msg=Rule or Checkpoint name ''{0}'' has not been defined yet
